# TheSky-X2

./: README.md
Camera-ToupTek/BuildEnv/: CMakeLists.txt
Camera-ToupTek/BuildEnv/Src/: main.cpp  x2camera.cpp  x2camera.h
Camera-ToupTek/Distribution/: cameralist ToupTek.txt
licensedinterfaces/: cameradriverinterface.h  x2guiinterface.h
